// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton component should render a link button 1`] = `
<div
  className="btn-group"
  onMouseDown={[Function]}
>
  <button
    className="btn"
    onClick={[Function]}
    type="button"
  >
    <span
      className="assembl-icon-text-link"
    />
  </button>
</div>
`;

exports[`LinkButton component should render an active LinkButton if selection is on a link 1`] = `
<div
  className="btn-group"
  onMouseDown={[Function]}
>
  <button
    className="btn active"
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="assembl-icon-text-link"
    />
  </button>
</div>
`;
